--- a/style.css
+++ b/style.css
@@ -1,9 +1,52 @@
+body {
+	font-family: "Poppins", serif;
+	font-weight: 400;
+	font-style: normal;
+}
+
+.title {
+	font-weight: bold;
+	color: white;
+	-webkit-text-stroke: 2px #000000;
+}
+
 .bg-custom {
-	background-image: url("./assets/img/bg-custom.svg");
+	background-image: url("./assets/img/bg-custom-2.svg");
 	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 .btn-custom {
-	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-		rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+	background-color: #f0f3ff;
+	border: 2px solid #15F5BA;
+	border-radius: 30px;
+	box-shadow: #15F5BA 4px 4px 0 0;
+	color: #000000;
+	cursor: pointer;
+	display: inline-block;
+	font-weight: 600;
+	font-size: 18px;
+	padding: 0 18px;
+	line-height: 50px;
+	text-align: center;
+	text-decoration: none;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+}
+
+.btn-custom:hover {
+	background-color: #fff;
+}
+
+.btn-custom:active {
+	box-shadow: #15F5BA 2px 2px 0 0;
+	transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+	.btn-custom {
+		min-width: 120px;
+		padding: 0 25px;
+	}
 }
