--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	font-family: "Poppins", serif;
+	font-family: "Lato", serif;
 	font-weight: 400;
 	font-style: normal;
 }
@@ -7,21 +7,21 @@ body {
 .title {
 	font-weight: bold;
 	color: white;
-	-webkit-text-stroke: 2px #000000;
+	-webkit-text-stroke: 2px #ff5f00;
 }
 
 .bg-custom {
-	background-image: url("./assets/img/bg-custom-2.svg");
+	background-image: url("./assets/img/bg-custom-3.svg");
 	background-size: cover;
 	background-repeat: no-repeat;
 }
 
 .btn-custom {
-	background-color: #f0f3ff;
-	border: 2px solid #15F5BA;
+	background-color: #002379;
+	border: 2px solid #ff5f00;
 	border-radius: 30px;
-	box-shadow: #15F5BA 4px 4px 0 0;
-	color: #000000;
+	box-shadow: #ff5f00 4px 4px 0 0;
+	color: #fff;
 	cursor: pointer;
 	display: inline-block;
 	font-weight: 600;
@@ -36,11 +36,11 @@ body {
 }
 
 .btn-custom:hover {
-	background-color: #fff;
+	background-color: #020f32;
 }
 
 .btn-custom:active {
-	box-shadow: #15F5BA 2px 2px 0 0;
+	box-shadow: #ff5f00 2px 2px 0 0;
 	transform: translate(2px, 2px);
 }
 
