--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ nav img {
 }
 
 .content .title {
-	margin-bottom: 20px;
+	margin-bottom: 25px;
 	text-align: center;
 }
 
@@ -68,12 +68,13 @@ nav img {
 .content .title p {
 	font-size: 1.25rem;
 	color: #757575;
+	margin-top: -10px;
 }
 
 .grid-container {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	margin-top: 2.5rem;
+	margin-top: 3.5rem;
 	margin-bottom: 2.5rem;
 	gap: 5rem;
 	color: black;
@@ -114,15 +115,17 @@ nav img {
 
 #user-image,
 #computer-image {
+	margin-top: -50px;
 	height: 40vh;
 	width: 45vw;
 }
 
 .button-group {
 	display: flex;
-	justify-content: center;
+	justify-content: start;
 	gap: 10px;
 	color: white;
+	padding-left: 12.5vw;
 }
 
 .button-group button {
